# proyecto_prog_ds

./: .python-version  README.md  descarga.sh  moma.py  pipeline.sh  pyproject.toml  virtualenv.sh
conf/: settings.toml
config/: settings.toml
moma.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sql/: create_raw_tables.sql  to_cleaned.sql  to_semantic.sql
