[tool.poetry]
name = "moma"
version = "0.1.0"
description = "Genera base de datos moma es postgreSQL"
authors = ["Ver readme"]
license = "GPL3.0+"
readme = "README.md"
repository = "https://github.com/Pilo1961/proyecto_prog_ds"
documentation = "https://github.com/Pilo1961/proyecto_prog_ds/README.md"
include = [
    "README.md",
    "pyproject.toml",
    "LICENSE"
]

[tool.poetry.dependencies]
python = "^3.7"
toml = "^0.10.0"
dynaconf = "^2.2"
click = "^7.0"
psycopg2 = "^2.8"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
#turista = "berka:berka"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
